<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PinoEmpanada">

    <ImageButton
        android:id="@+id/btnRecetasAnteriores3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D52B1E"
        android:contentDescription="@string/volver_atras"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tituloEmpanadaPino3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/titulo_empanada_pino"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRecetasAnteriores2" />

    <ImageView
        android:id="@+id/imgEmpanadaPino3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/titulo_empanada_pino"
        android:src="@drawable/empanada_pino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tituloEmpanadaPino" />

    <TextView
        android:id="@+id/ingredientesEmpanadaPino3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredientes_empanada_pino"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/preparacionEmpanadaPino3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preparacion_empanada_pino"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />
</androidx.constraintlayout.widget.ConstraintLayout>