<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainSour"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_chile"
    tools:context=".MangoSour">

    <!-- Botón atrás -->
    <ImageButton
        android:id="@+id/btnAtrasMangoSour"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/volver_atras"
        android:scaleType="centerCrop"
        android:src="@drawable/btn_retroceso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Título -->
    <TextView
        android:id="@+id/tituloMangoSour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/titulo_mango_sour"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAtrasMangoSour" />

    <!-- Imagen -->
    <ImageView
        android:id="@+id/imgMangoSour"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/titulo_mango_sour"
        android:src="@drawable/mango_sour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tituloMangoSour" />

    <!-- Cuadro azul con ingredientes y preparación -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#0039A6"
        android:padding="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/imgMangoSour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Ingredientes -->
        <TextView
            android:id="@+id/ingredientesMangoSour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredientes_mango_sour"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <!-- Preparación -->
        <TextView
            android:id="@+id/preparacionMangoSour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preparacion_mango_sour"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
