<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/empanada_marisco"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_chile"
    tools:context=".MariscoEmpanada">

    <ImageButton
        android:id="@+id/btnMenuRetroceder"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/volver_atras"
        android:scaleType="centerCrop"
        android:src="@drawable/btn_retroceso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tituloEmpanadaMarisco2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_empanada_marisco"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <ImageView
        android:id="@+id/imgEmpanadaMarisco2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/titulo_empanada_marisco"
        android:src="@drawable/empanada_marisco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="341dp"
        android:layout_height="428dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="6dp"
        android:background="#0039A6"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ingredientesEmpanadaMarisco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredientes_empanada_marisco"
                android:textColor="#FFFF"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/preparacionEmpanadaMarisco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preparacion_empanada_marisco"
                android:textColor="#FFFF"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="12dp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>