<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_chile"
    tools:context=".Tragos">

    <!-- Botón de retroceso -->
    <ImageButton
        android:id="@+id/btnRetrocederAnterior"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/volver_atras"
        android:scaleType="centerCrop"
        android:src="@drawable/btn_retroceso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Terremoto -->

    <TextView
        android:id="@+id/tvTerremoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/titulo_terremoto"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRetrocederAnterior" />

    <!-- Vino con Frutas -->
    <ImageButton
        android:id="@+id/btnTerremoto"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="4dp"
        android:background="#0039A6"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_terremoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTerremoto" />

    <TextView
        android:id="@+id/tvVinoFrutas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_vino_frutas"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/btnTerremoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <ImageButton
        android:id="@+id/btnVinoFrutas"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:background="#0039A6"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_vinos"
        app:layout_constraintTop_toBottomOf="@+id/tvVinoFrutas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Mango Sour -->
    <TextView
        android:id="@+id/tvMangoSour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_mango_sour"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/btnVinoFrutas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <ImageButton
        android:id="@+id/btnMangoSour"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:background="#0039A6"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/btn_mango"
        app:layout_constraintTop_toBottomOf="@+id/tvMangoSour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
